tweaks for moving facets to left - have to move spacer also so it still aligns correctly

--- a/NUdev/css/custom1.css
+++ b/NUdev/css/custom1.css
@@ -1,7 +1,4 @@
-
-
-/*Uncomment the follwoing lines to move facets to the left*/
-
+/*move facets to left*/
 prm-search > md-content.md-primoExplore-theme #main-results {
     display: -webkit-flex; !* Safari *!
     -webkit-flex-flow: row-reverse wrap; !* Safari 6.1+ *!
@@ -14,5 +11,5 @@ prm-search > md-content.md-primoExplore-theme #main-results {
     flex: 0 0 15%;
 }
 
-
-div#facets { order: -1; }
+div#facets, prm-search > md-content.md-primoExplore-theme > div:first-of-type { order: -1; }
+/*end move facets to left*/
